--- a/taskmaster.client/package.json
+++ b/taskmaster.client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "joi": "^17.13.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
